--- a/mohamed/style.css
+++ b/mohamed/style.css
@@ -4,34 +4,69 @@
     padding: 0;
     box-sizing: border-box;
 }
-.page {
+
+.section  {
  width: 100%;
  height: 820px;
- background-color:rgb(253, 140, 112, 0.7);
-}
+ background-color:rgba(211, 82, 50, 0.7);
 
-div {
-    margin: 0 auto;
-    width: 100px;
-    height: 100px;
-    color: yellow;
-    animation-name: anim;
-    animation-duration: 1s;
-    animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    
 }
 
 
 
+.processing-container {
+    margin: 2% auto;
+    width: 100%px ;
+    height: 800px;
+    border: 2px solid rgb(37, 37, 4);
+}
 
-
-/* 
-span {
-    margin: 0 auto;
-    width: 100px;
-    height: 100px;
-    color: black;
+.img1 {
+    width: 80px;
+    height: 80px;
     animation-name: anim;
-    animation-duration: 1s;
-    animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
-} */
+    animation-duration: 4s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: reverse;
+    animation-fill-mode: backwards;
+
+}
+.img2 {
+    width: 80px;
+    height: 80px;
+    animation-name: anim;
+    animation-duration: 4s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: reverse;
+    animation-fill-mode: backwards;
+
+}
+.img3 {
+    width: 80px;
+    height: 80px;
+    animation-name: anim;
+    animation-duration: 4s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: reverse;
+    animation-fill-mode: backwards;
+
+}
+@keyframes anim {
+    0% {
+        right: 50px;
+
+        /* transform: translateX(-1px 700px) rotate(0turn); */
+    }
+
+    60% {
+
+        left: 50px;
+    }
+
+      /* transform: translate(700px -1px) rotate(4turn);; */
+  }
+
+
