--- a/mohamed/style.css
+++ b/mohamed/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: tomato;
 }
 
 .section  {
@@ -21,14 +22,17 @@
     border: 2px solid rgb(37, 37, 4);
 }
 
+
+
 .img1 {
     width: 80px;
     height: 80px;
     animation-name: anim;
-    animation-duration: 4s;
+    animation-duration: 1s;
     animation-delay: 1s;
     animation-iteration-count: infinite;
-    animation-direction: reverse;
+    /* transition: visibility ; */
+   
     animation-fill-mode: backwards;
 
 }
@@ -36,37 +40,41 @@
     width: 80px;
     height: 80px;
     animation-name: anim;
-    animation-duration: 4s;
-    animation-delay: 1s;
+    animation-duration: 1s;
+    animation-delay: 4s;
     animation-iteration-count: infinite;
-    animation-direction: reverse;
+ 
     animation-fill-mode: backwards;
 
-}
+} 
+
 .img3 {
     width: 80px;
     height: 80px;
     animation-name: anim;
-    animation-duration: 4s;
-    animation-delay: 1s;
+    animation-duration: 1s;
+    animation-delay: 6s;
     animation-iteration-count: infinite;
-    animation-direction: reverse;
+  
     animation-fill-mode: backwards;
-
+    
 }
-@keyframes anim {
-    0% {
-        right: 50px;
+  
 
+@keyframes anim {
+    from {
+      transform: translate(500px, -1px) ;
+      
+      transition: hidden;
         /* transform: translateX(-1px 700px) rotate(0turn); */
     }
 
-    60% {
-
-        left: 50px;
+    at {
+        transform: translate(500px, -1px);
     }
+}
 
       /* transform: translate(700px -1px) rotate(4turn);; */
-  }
+  
 
 
