--- a/mohamed/style.css
+++ b/mohamed/style.css
@@ -3,78 +3,215 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: tomato;
+    background-color: #f0c3d2;
 }
 
 .section  {
  width: 100%;
  height: 820px;
- background-color:rgba(211, 82, 50, 0.7);
-
 }
 
 
 
 .processing-container {
-    margin: 2% auto;
+  
     width: 100%px ;
-    height: 800px;
-    border: 2px solid rgb(37, 37, 4);
+    height: 570px;
+   
 }
 
 
 
 .img1 {
+    position: absolute;
+    left: 600px;
+    bottom: 250px;
     width: 80px;
     height: 80px;
     animation-name: anim;
     animation-duration: 1s;
     animation-delay: 1s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
     /* transition: visibility ; */
-   
+    visibility: hidden;
     animation-fill-mode: backwards;
 
 }
+
 .img2 {
+    position: absolute;
+    left: 600px;
+    bottom: 250px;
     width: 80px;
     height: 80px;
-    animation-name: anim;
-    animation-duration: 1s;
-    animation-delay: 4s;
-    animation-iteration-count: infinite;
- 
+    animation-name: anim2;
+    animation-duration: 2s;
+    animation-delay: 2s;
+    animation-iteration-count: 1;
+    visibility: hidden;
     animation-fill-mode: backwards;
 
-} 
+}
 
+.img-double {
+    position: absolute;
+    left: 600px;
+    bottom: 250px;
+    width: 80px;
+    height: 80px;
+    animation-name: img-double;
+    animation-duration: 1s;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    visibility: hidden;
+    animation-fill-mode: backwards;
+}
 .img3 {
+    position: absolute;
+    left: 600px;
+    bottom: 250px;
+    width: 80px;
+    height: 80px;
+    animation-name: anim3;
+    animation-duration: 2s;
+    animation-delay: 3.5s;
+    animation-iteration-count: 1;
+    visibility: hidden;
+    animation-fill-mode: backwards;
+}
+
+.label1 {
+    position: absolute;
+    left: 600px;
+    bottom: 150px;
     width: 80px;
     height: 80px;
     animation-name: anim;
     animation-duration: 1s;
-    animation-delay: 6s;
-    animation-iteration-count: infinite;
-  
+    animation-delay: 1s;
+    animation-iteration-count: 1;
+    /* transition: visibility ; */
+    visibility: hidden;
     animation-fill-mode: backwards;
+}
+.label2 {
+    position: absolute;
+    left: 600px;
+    bottom: 150px;
+    width: 80px;
+    height: 80px;
+    animation-name: anim2;
+    animation-duration: 2s;
+    animation-delay: 2s;
+    animation-iteration-count: 1;
+    visibility: hidden;
+    animation-fill-mode: backwards;
+
+}
+.label3 {
+    position: absolute;
+    left: 600px;
+    bottom: 150px;
+    width: 80px;
+    height: 80px;
+    animation-name: img-double;
+    animation-duration: 1s;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    visibility: hidden;
+    animation-fill-mode: backwards;
+}
+
+.label-done {
+    position: absolute;
+    left: 627px;
+    bottom: 150px;
+    width: 80px;
+    height: 80px;
+    animation-name: anim3;
+    animation-duration: 2s;
+    animation-delay: 3.5s;
+    animation-iteration-count: 1;
+    visibility: hidden;
+    animation-fill-mode: backwards;
+}
+
+      @keyframes anim {
+
+        0% {
+            transform: scale(0.8) translateX(300%) translateY(0%) ;
+            opacity: 0;
+            visibility: visible;
+        }
+        20% {
+            transform: scale(1) translateX(130%) translateY(0%);
+            opacity: 1;
+            visibility: visible;
+     
+        }
+        100% {
+            transform: scale(1) ;
+            opacity: 0;
+            visibility: hidden;
+        }
+    }
+
+
+    @keyframes anim2 {
+        0% {
+            transform: scale(0.8) translateX(500%) translateY(0%) ;
+            opacity: 0;
+            visibility: visible;
+        }
+        20% {
+            transform: scale(1) translateX(130%) translateY(0%);
+            opacity: 1;
+            visibility: visible;
+     
+        }
+        100% {
+            transform: scale(1)   ;
+            opacity: 0;
+            visibility: hidden;
+        }
+    }
+
+    @keyframes img-double {
+        0% {
+            transform: scale(0.8) translateX(500%) translateY(0%);
+            opacity: 0;
+            visibility: visible;
+        }
+        20% {
+            transform: scale(1) translateX(130%) translateY(0%);
+            opacity: 1;
+            visibility: visible;
+     
+        }
+        100% {
+            transform: scale(1)   ;
+            opacity: 0;
+            visibility: hidden;
+        }
+    }
     
-}
-  
-
-@keyframes anim {
-    from {
-      transform: translate(500px, -1px) ;
-      
-      transition: hidden;
-        /* transform: translateX(-1px 700px) rotate(0turn); */
+    
+    @keyframes anim3 {
+        0% {
+            transform: scale(0.8) translateX(500%) translateY(0%);
+            opacity: 0;
+            visibility: visible;
+        }
+        20% {
+            transform: scale(1) translateX(130%) translateY(0%) ;
+            opacity: 1;
+            visibility: visible;
+     
+        }
+        100% {
+           
+            transform: scale(1) translateX(50%) translateY(80%) ;
+            opacity: 1;
+            visibility: visible;
+        }
     }
-
-    at {
-        transform: translate(500px, -1px);
-    }
-}
-
-      /* transform: translate(700px -1px) rotate(4turn);; */
-  
-
-
